force-app/main/default/objects/Product2/fields/CANTIDAD_SUB_UNIDAD__c.field-meta.xml
<CustomField>
    <fullName>CANTIDAD_SUB_UNIDAD__c</fullName>
    <label>Unit Converting Rate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>