force-app/main/default/objects/Product2/fields/Categ__c.field-meta.xml
<CustomField>
    <fullName>Categ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>