force-app/main/default/objects/Product2/fields/Codigo_Material_SAP__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Material_SAP__c</fullName>
    <label>SAP Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>