force-app/main/default/objects/Product2/fields/Cultivar_Number__c.field-meta.xml
<CustomField>
    <fullName>Cultivar_Number__c</fullName>
    <formula>Variedade__r.GID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GID Number</label>
    <type>Text</type>
</CustomField>