force-app/main/default/objects/Product2/fields/Exclusive_Variety__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Variety__c</fullName>
    <formula>Variedade__r.Exclusive_Variety__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclusive Variety</label>
    <type>Checkbox</type>
</CustomField>