force-app/main/default/objects/Product2/fields/ID_Largo__c.field-meta.xml
<CustomField>
    <fullName>ID_Largo__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Largo</label>
    <type>Text</type>
</CustomField>