force-app/main/default/objects/Product2/fields/Licensee_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Brand_Name__c</fullName>
    <label>Licensee Brand Name DO NOT USE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Name</valueSetName>
    </valueSet>
</CustomField>