force-app/main/default/objects/Product2/fields/Licensee_Variety_Id__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Variety_Id__c</fullName>
    <label>Licensee Variety Id DO NOT USE</label>
    <length>55</length>
    <type>Text</type>
</CustomField>