force-app/main/default/objects/Product2/fields/Semilla_Tratada__c.field-meta.xml
<CustomField>
    <fullName>Semilla_Tratada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Semilla Tratada</label>
    <type>Checkbox</type>
</CustomField>