force-app/main/default/objects/Product2/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <formula>TEXT(Variedade__r.Tecnologia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trait</label>
    <type>Text</type>
</CustomField>