force-app/main/default/objects/Product2/fields/Tipo_de_Cota_o_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cota_o_Contrato__c</fullName>
    <description>Tipo de Cotação para o contrato de multiplicação</description>
    <inlineHelpText>Tipo de Cotação para o contrato de multiplicação</inlineHelpText>
    <label>Tipo de Cotação (Contrato)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOJA</fullName>
            </value>
            <value>
                <fullName>DOLAR</fullName>
            </value>
            <value>
                <fullName>FATURAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>