force-app/main/default/objects/Product2/fields/UNIDADE__c.field-meta.xml
<CustomField>
    <fullName>UNIDADE__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAG 140K</fullName>
            </value>
            <value>
                <fullName>BAG 40(140K)</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>BAGS BY LBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>