force-app/main/default/objects/Product2/fields/use_for_Test__c.field-meta.xml
<CustomField>
    <fullName>use_for_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>use for Test</label>
    <type>Checkbox</type>
</CustomField>