force-app/main/default/objects/Product2/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety Name</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>