force-app/main/default/objects/Product2/fields/Variety_Brand__c.field-meta.xml
<CustomField>
    <fullName>Variety_Brand__c</fullName>
    <formula>TEXT(Variedade__r.Brand__c)</formula>
    <label>Variety Brand</label>
    <type>Text</type>
</CustomField>