force-app/main/default/objects/Product2/fields/Variety_Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Variety_Royalty_Rate__c</fullName>
    <formula>Variedade__r.Royalty_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety Royalty Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>