force-app/main/default/objects/Product2/listViews/All_Royalties.listView-meta.xml
<ListView>
    <fullName>All_Royalties</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Variedade__c</columns>
    <columns>UNIDADE__c</columns>
    <columns>Tecnologia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Royalty</value>
    </filters>
    <label>All Royalties</label>
</ListView>