force-app/main/default/objects/Product2/listViews/All_Seeds.listView-meta.xml
<ListView>
    <fullName>All_Seeds</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>UNIDADE__c</columns>
    <columns>Variedade__c</columns>
    <columns>Categ__c</columns>
    <columns>CANTIDAD_SUB_UNIDAD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Seed</value>
    </filters>
    <label>All Seeds</label>
</ListView>