force-app/main/default/objects/Product2/listViews/All_Virtue_Products.listView-meta.xml
<ListView>
    <fullName>All_Virtue_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Variety_Brand__c</columns>
    <columns>Variedade__c</columns>
    <columns>Codigo_Material_SAP__c</columns>
    <columns>CANTIDAD_SUB_UNIDAD__c</columns>
    <columns>UNIDADE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Variety_Brand__c</field>
        <operation>equals</operation>
        <value>VIRTUE</value>
    </filters>
    <label>All Virtue Products</label>
</ListView>