force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Variety_Brand__c</columns>
    <columns>Variedade__c</columns>
    <columns>Codigo_Material_SAP__c</columns>
    <columns>CANTIDAD_SUB_UNIDAD__c</columns>
    <columns>UNIDADE__c</columns>
    <columns>Categ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>